Bug 1056411 - Part 1: Remove DebugFromC and clean up compartment debug mode logic. (r=jimb)