js/xpconnect/src/XPCJSRuntime.cpp
@@ -2212,10 +2212,6 @@ ReportCompartmentStats(const JS::CompartmentStats &cStats,
         cStats.regexpCompartment,
         "The regexp compartment and regexp data.");
 
-    ZCREPORT_BYTES(cJSPathPrefix + NS_LITERAL_CSTRING("debuggees-set"),
-        cStats.debuggeesSet,
-        "The debuggees set.");
-
     if (sundriesGCHeap > 0) {
         // We deliberately don't use ZCREPORT_GC_BYTES here.
         REPORT_GC_BYTES(cJSPathPrefix + NS_LITERAL_CSTRING("sundries/gc-heap"),
